<resources>
    <string name="app_name">ApiConsumer</string>
    <string name="saludo">Buenos días</string>
    <string name="temperarture">%1$s°</string>
    <string name="content">Viernes Parcialmente nublado</string>
    <string name="city">Esparza, Puntarenas</string>
    <string name="min_max">32° | 39°</string>
    <string name="day_greeting">Buenos días</string>
    <string name="afternoon_greeting">Buenas tardes</string>
    <string name="night_greeting">Buenas noches</string>
    <string name="minmax">%1$s°  | %2$s°</string>
</resources>